# llm-playground

./: .gitattributes  .gitignore  .gitmodules  create_stories_data.py  harmless.txt  layer_distances.csv  pixi.toml  pyproject.toml  snr_results_T145-ZEUS-8B-V2_sorted.json  snr_results_T145-ZEUS-8B-V2_unfrozenparameters_50percent.yaml  test.py
configs/: 11.5B-zeus.yml  JUPITER.yml  qwen_vision_merge.yml  test.yml  v10-attempt.yml  zeus-11.yml  zeus-V17-abliterated.yml  zeus-evolve.yml  zeus-orpo.yml
experiments/: layers.py
scripts/: 11b-zeus.py  abliterate.py  baseline.py  custom.json  gguf-imat-for-FP16.py  hades.py  jupiter.py  kronos.py  math-forge.py  merge-lora.py  merge.py  quantize.py  qwen-dataset.py  results.py  run_qwen_vision_merge.py  upload.py  zeus-evolve.py  zeus-moe.py  zeus-new.py  zeus.py
scripts/quantize/: llama3.py
scripts/vision/: README.md  merge_qwen_vision_adapters.py  merge_vision_adapters.py  quanitize_vision.py  quantize_mistral.py
