[project]
authors = [{name = "T145"}]
description = "LLM scripts and helpers"
name = "llm-playground"
requires-python = "< 3.13"
version = "1.0.0"
dependencies = ["bitsandbytes>=0.45.5,<0.46", "jupyterlab>=4.4.2,<5", "ipywidgets>=8.1.7,<9", "notebook>=7.4.2,<8", "inspectus>=0.2.0,<0.3", "langdetect>=1.0.9,<2", "immutabledict>=4.2.1,<5", "absl-py>=2.2.2,<3", "nltk>=3.9.1,<4", "ruamel-yaml>=0.18.10,<0.19", "airllm>=2.11.0,<3", "gradio>=5.29.1,<6", "llama-cpp-python>=0.3.9,<0.4", "mergekit @ git+https://github.com/arcee-ai/mergekit.git"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch"]
platforms = ["win-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.7.0,<3"
pytorch-cuda = ">=12.4,<13"

[tool.pypi-dependencies]
huggingface-hub = {version = ">=0.31.2,<0.32", extras = ["hf_xet"]}

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
exclude = [".pixi"]
ignore = ["E501", "E402"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Warnings
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-quotes
    "Q",
    # flake8-async
    "ASYNC"
]
line-length = 132
